--- a/stylesgit01.css
+++ b/stylesgit01.css
@@ -1,20 +1,19 @@
 .footer-rows > .custom-footer {
-        padding-top: 0;
+    padding-top: 0;
 }
 .footer-rows > .custom-footer>div.extended {
-        width: 100%;
+    width: 100%;
 }
 .container.footer-rows {
     width: 100%;
     max-width: 100%!important;
     padding: 0 !important;
-
 }
 .custom-footer {
     border-style: none;
 }
 .custom-footer>.custom-footer__newsletter {
-    margin-top: 10px;
+    text-align: left;
     width: 100%;
     display: grid;
     align-items: center;
@@ -27,20 +26,20 @@
     padding-top: 60px;
     padding-bottom: 60px;
     margin-bottom: 20px;
+    margin-top: 20px;
     position: relative;
 }
 .custom-footer>.custom-footer__newsletter::before {
     content: "";
     position: absolute;
-    background: url("https://www.ppcentershop.cz/user/documents/upload/gallery/Footer_newsletter_ppcentershop_natios_04.png");
+    background: url("https://www.ppcentershop.cz/user/documents/upload/gallery/Footer_newsletter_ppcentershop_natios_06.png");
     background-size: cover;
     background-repeat: no-repeat;
-    width: 469px;
-    height: 328px;
+    width: 440px;
+    height: 356px;
     bottom: 0;
     left: 0;
     z-index: 5;
-
 }
 .custom-footer>.custom-footer__newsletter>.newsletter-header {
     grid-row: 1;
@@ -49,10 +48,11 @@
 .custom-footer>.custom-footer__newsletter>form {
     grid-row: 2;
     grid-column: 2;
+    width: 100%;
 }
 .custom-footer>.custom-footer__newsletter>.newsletter-header::after {
     content: "Přihlaste se k odběru našeho newsletteru, aby Vám již neutekly žádné akce, slevy ani novinky! Můžete se těšit na pravidelné, časově omezené akce, které jsou dostupné pouze pro naše odběratele.";
-    text-align: center;
+    text-align: justify;
     display: block;
     padding-bottom: 10px;
 }
@@ -60,42 +60,50 @@
     margin: 0;
 }
 .custom-footer__newsletter>.newsletter-header> h4 {
-    font-size: 20px;
+    font-size: 45px;
     font-family: "Open Sans",sans-serif;
-    font-weight: bold;
+    font-weight: 600;
     color: #303233;
-    margin-bottom: 20px;
-    margin-left: 5px;
-    text-align: center;
+    margin-bottom: 10px;
+    margin-left: 0;
+    text-align: left;
+}
+.custom-footer__newsletter>.newsletter-header>.topic>span {
+    display: none;
+}
+.custom-footer__newsletter>.newsletter-header>.topic::after {
+    content: "NEWSLETTER";
 }
 .custom-footer__newsletter>form>fieldset>.validator-msg-holder>input {
     min-height: 50px;
-    border-radius: 100px;
+    border-radius: 5px;
     padding-left: 20px;
+    margin-left: -2px;
 }
 .custom-footer__newsletter>form>fieldset>.validator-msg-holder>input:focus {
     -webkit-box-shadow: 1px 2px 5px 3px rgba(144,104,190,0.3);
     box-shadow: 1px 2px 5px 3px rgba(144,104,190,0.3);
 }
 .custom-footer__newsletter>form>fieldset>button {
-    min-height: 44px;
-    border-radius: 50px!important;
+    min-height: 48px;
+    border-radius: 0 5px 5px 0px!important;
     width: 100px;
-    right: 3px!important;
-    top: 3px!important;
+    right: 0px!important;
+    top: 1px!important;
 }
 .custom-footer__newsletter>form>fieldset br {
     display: none;
 }
 .custom-footer__newsletter>form>fieldset>div>.form-group {
     font-size: 12px;
-    text-align: center;
+    margin-top: 7px;
+    text-align: justify;
 }
 
 @media (max-width: 1100px) {
     .custom-footer>.custom-footer__newsletter::before {
         width: 375px;
-        height: 262px;
+        height: 303px;
     }
     .custom-footer>.custom-footer__newsletter {
         padding-top: 30px;
@@ -124,5 +132,10 @@
     }
     .custom-footer__newsletter>form>fieldset>button {
         max-width: 50px;
+    }
+    .custom-footer__newsletter>.newsletter-header> h4,
+    .custom-footer>.custom-footer__newsletter>.newsletter-header::after,
+    .custom-footer__newsletter>form>fieldset>div>.form-group {
+        text-align: center;
     }
 }
