--- a/stylesgit03.css
+++ b/stylesgit03.css
@@ -198,7 +198,7 @@ h4{
     border-style: solid;
     border-width: 1px;
     border-color: #8f8f8f;
-    padding: 15px 20px 15px 20px;
+    padding: 0px 20px 0px 20px;
     margin-bottom: 20px;
     position: relative;
     cursor: pointer;
@@ -206,10 +206,12 @@ h4{
 }
 
 .contact-faq-question>p{
-    margin-bottom: 0px;
-    font-weight: 400;
+	margin-bottom: 0px;
+	font-weight: 400;
 	text-align: left;
 	padding-right: 20px;
+	padding-top: 15px;
+	padding-bottom: 15px;
 }
 .contact-faq-answer{
     position: relative;
@@ -269,9 +271,8 @@ h4{
 		grid-template-rows: repeat(4, 1fr);
 		grid-row-gap: 30px;
 		max-width: 350px;
-		
 		margin: auto;
-}
+	}
 	.contact-block{
 	}
 	.contact-faq-box{
