--- a/stylesgit04.css
+++ b/stylesgit04.css
@@ -177,8 +177,7 @@
     align-items: flex-start;
 
 }
-.contact-faq-nadpis>h4,
-h4{
+.contact-faq-nadpis>h4{
     font-size: 35px;
     font-weight: 600;
     text-align: center;
