--- a/Velikonocecz01.css
+++ b/Velikonocecz01.css
@@ -10,7 +10,7 @@
 	content: "Informace o doručení během Velikonoc ZDE.";
 	text-align: center;
 	width: 50%;
-	background: #745395;
+	background: rgb(0 0 0 / 15%);
 	padding: 5px;
 	cursor: pointer;
 	transition: all 0.1s ease-in-out;
