--- a/stylesgit05.css
+++ b/stylesgit05.css
@@ -11,6 +11,7 @@
 }
 .custom-footer {
     border-style: none;
+    margin-top: 60px;
 }
 .custom-footer>.custom-footer__newsletter {
     text-align: left;
@@ -26,7 +27,7 @@
     padding-top: 60px;
     padding-bottom: 60px;
     margin-bottom: 20px;
-    margin-top: 60px;
+    margin-top: 0px;
     position: relative;
 }
 .custom-footer>.custom-footer__newsletter::before {
@@ -98,6 +99,21 @@
     font-size: 12px;
     margin-top: 7px;
     text-align: justify;
+}
+
+.custom-footer__onlinePayments>.text-center{
+	text-align: left;
+}
+
+/*zarovnani ve footeru*/
+@media (min-width: 768px){
+	.custom-footer>*:nth-child(1n+2){
+		display: grid;
+		align-items: start;
+		justify-items: start;
+		justify-content: start;
+		align-content: baseline;
+	}
 }
 
 @media (max-width: 1100px) {
