--- a/OldStaticSave_ruzneupravy.css
+++ b/OldStaticSave_ruzneupravy.css
@@ -1166,4 +1166,9 @@ table.table tbody>tr>td {
     padding: 0.75rem 1rem;
 }
 
+@media (max-width:767px) {
+	table.table tbody>tr>td {
+    		padding: 0.25rem 0.5rem;
+	}
+}
 
