--- a/Velkoobchod_ppcentershop_01.css
+++ b/Velkoobchod_ppcentershop_01.css
@@ -537,3 +537,174 @@ ol.cart-header>li>strong::before{
 }
 /*konec kav*/
 /*KONEC UPRAVY PRODUTKY SEKCE*/
+
+/*KONTAKTY BLOKY*/
+.contact-blocks {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    text-align: center;
+    column-gap: 2%;
+}
+.contact-block {
+    border-radius: 20px;
+    background: #F5F6F5;
+    padding: 15px 20px 20px 20px;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    justify-items: center;
+    align-items: center;
+}
+.contact-block> a > span {
+    font-weight: 600;
+    text-decoration: underline;
+}
+.contact-block > p {
+    margin-bottom: 0;
+    font-size: 14px;
+}
+.contact-block>svg,
+.contact-block>svg>image{
+    width: 50px;
+    height: 50px;
+}
+
+/*FAQ*/
+.contact-faq-box{
+    display: flex;
+    column-gap: 2%;
+    align-items: flex-start;
+
+}
+.contact-faq-nadpis>h4{
+    font-size: 35px;
+    font-weight: 600;
+    text-align: center;
+    font-family: HelvetNowText,sans-serif;
+    color: #9068be;
+	margin-top: 60px;
+	margin-bottom: 30px;
+}
+.contact-faq-questions{
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
+}
+
+.contact-faq-question{
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #8f8f8f;
+    padding: 0px 20px 0px 20px;
+    margin-bottom: 20px;
+    position: relative;
+    cursor: pointer;
+    width: 100%;
+}
+
+.contact-faq-question>p{
+	margin-bottom: 0px;
+	font-weight: 400;
+	text-align: left;
+	padding-right: 20px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+.contact-faq-answer{
+    position: relative;
+}
+.contact-faq-answer>p{
+    margin-bottom: 10px;
+    margin-top: 15px;
+    padding: 20px 30px;
+    background: #f6f6f6;
+    border-radius: 10px;
+    text-align: left;
+}
+.contact-faq-answer>p::before{
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 30px;
+    width: 0;
+    height: 0;
+    border: 16px solid transparent;
+    border-bottom-color: #f6f6f6;
+    border-top: 0;
+    border-left: 0;
+
+}
+.contact-faq-question>p::after{
+    content: "\e90e";
+    position: absolute;
+    right: 20px;
+    font-family: shoptet;
+    font-style: normal;
+    color: #9068be;
+	top: 15px;
+}
+.contact-faq-question.active>p::after{
+    content: "\e911";
+}
+.contact-faq-question>.contact-faq-answer{
+    height: 0;
+    overflow: hidden;
+}
+.contact-faq-question.active>.contact-faq-answer{
+    height: auto;
+}
+.contact-faq-answer>p>a{
+    font-weight: bold;
+    animation: all 0.1s ease-in;
+}
+.contact-faq-answer>p>a:hover{
+    color: #ff8c00;
+    text-decoration: underline;
+}
+.openning-hours-blocks {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	justify-items: center;
+  text-align: center;
+	margin-bottom: 20px;
+}
+.openning-hours-block {
+	padding: 15px;
+}
+.openning-hours-day {
+	font-weight: bold;
+	font-size: 18px;
+	margin-bottom: 5px;
+}
+.openning-hours {
+	margin-bottom: 0;
+}
+
+@media (max-width:1000px){
+	.contact-blocks {
+		grid-template-columns: repeat(1, 1fr);
+		grid-template-rows: repeat(4, 1fr);
+		grid-row-gap: 30px;
+		max-width: 350px;
+		margin: auto;
+	}
+	.contact-block{
+	}
+	.contact-faq-box{
+		flex-wrap: wrap;
+		padding-left: 2%;
+		padding-right: 2%;
+	}
+	.contact-faq-questions{
+		width: 100%;
+	}
+  .openning-hours-blocks {
+    grid-template-columns: 1fr;
+    justify-items: left;
+    text-align: left;
+    margin-bottom: 20px;
+  }
+	.openning-hours-block {
+    padding: 5px;
+  }
+}
