--- a/Velkoobchod_ppcentershop_01.css
+++ b/Velkoobchod_ppcentershop_01.css
@@ -1,7 +1,10 @@
 .container {
  	width: 100%;
 	max-width: 1712px;
-	padding: 0 2%;
+}
+
+#content-wrapper{
+	padding: 0 3%;
 }
 
 #footer h4{
@@ -36,9 +39,6 @@
 	#header .header-top,
 	#header .header-top .header-top-wrapper {
 		height: auto!important;
-	}
-	.container {
- 		padding: 0 8px;
 	}
 }
 
