--- a/Velkoobchod_ppcentershop_01.css
+++ b/Velkoobchod_ppcentershop_01.css
@@ -294,7 +294,7 @@ ol.cart-header>li>strong::before{
 		}
 		#content>.product-slider-holder .products-block>div {
 			border-right-style: none!important;
-			border-bottom-style: solid;
+			border-bottom-style: solid!important;
 		}
 		#content>.product-slider-holder .products-block>.product:nth-last-child(-n+4) {
 			border-bottom-style: none!important;
