--- a/Velkoobchod_ppcentershop_01.css
+++ b/Velkoobchod_ppcentershop_01.css
@@ -817,12 +817,11 @@ ol.cart-header>li>strong::before{
 	grid-template-columns: 2fr 1fr;
 	grid-template-rows: 1fr 1fr;
 	min-height: auto!important;
-	gap: 20px;
 }
 
 
 .wide-carousel>#carousel>.carousel-inner>div{
-	display:flex;
+	display: grid;
 }
 
 .wide-carousel>#carousel>.carousel-inner>div:nth-child(1) {
@@ -838,6 +837,13 @@ ol.cart-header>li>strong::before{
 .wide-carousel>#carousel>.carousel-inner>div:nth-child(3) {
 	grid-row: 2;
 	grid-column: 2;
+	align-items: end;
+}
+.wide-carousel>#carousel>.carousel-inner>div:nth-child(2) img,
+.wide-carousel>#carousel>.carousel-inner>div:nth-child(3) img{
+	max-height: calc(100% - 10px);
+	width: auto;
+	padding-left: 20px;
 }
 .wide-carousel>.carousel>.carousel-control{
 	display: none;
