--- a/Velkoobchod_ppcentershop_01.css
+++ b/Velkoobchod_ppcentershop_01.css
@@ -878,6 +878,7 @@ ol.cart-header>li>strong::before{
 	background-color: #fff;
 	opacity: 0;
 	transition: all 0.3s ease-in-out;
+	pointer-events: none;
 }
 
 .next-to-carousel-banners>div:hover,
