--- a/Velkoobchod_ppcentershop_01.css
+++ b/Velkoobchod_ppcentershop_01.css
@@ -891,6 +891,55 @@ ol.cart-header>li>strong::before{
 	opacity: 0.07;
 }
 
+@media (max-width: 1420px){
+	.wide-carousel>#carousel>.carousel-inner{
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: 2fr 1fr;
+		gap: 10px
+	}
+	.wide-carousel>#carousel>.carousel-inner>div:nth-child(1){
+		grid-column: 1 / 3;
+		grid-row: 1;
+	}
+	.wide-carousel>#carousel>.carousel-inner>div:nth-child(2){
+		grid-column: 1;
+		grid-row: 2;
+	}
+	.wide-carousel>#carousel>.carousel-inner>div:nth-child(3){
+		grid-column: 2;
+		grid-row: 2;
+		top: 0;
+	}
+	.wide-carousel>#carousel>.carousel-inner>div:nth-child(2) img,
+	.wide-carousel>#carousel>.carousel-inner>div:nth-child(3) img{
+		padding: 0;
+	}
+}
+
+@media (max-width: 768px){
+	.wide-carousel>#carousel>.carousel-inner{
+		grid-template-columns: 1fr;
+		grid-template-rows: 1fr 1fr 1fr;
+		gap: 10px
+	}
+	.wide-carousel>#carousel>.carousel-inner>div:nth-child(1){
+		grid-column: 1;
+		grid-row: 1;
+	}
+	.wide-carousel>#carousel>.carousel-inner>div:nth-child(2){
+		grid-column: 1;
+		grid-row: 2;
+	}
+	.wide-carousel>#carousel>.carousel-inner>div:nth-child(3){
+		grid-column: 1;
+		grid-row: 3;
+	}
+	.wide-carousel>#carousel>.carousel-inner>div:nth-child(2) img,
+	.wide-carousel>#carousel>.carousel-inner>div:nth-child(3) img{
+		padding: 0;
+	}
+}
+
 
 /*hlavni menu*/
 @media (min-width: 768px) {
