--- a/Velkoobchod_ppcentershop_01.css
+++ b/Velkoobchod_ppcentershop_01.css
@@ -938,6 +938,9 @@ ol.cart-header>li>strong::before{
 	.wide-carousel>#carousel>.carousel-inner>div:nth-child(3) img{
 		padding: 0;
 	}
+	.wide-carousel>#carousel>.carousel-inner>div{
+		margin: auto;
+	}
 }
 
 
