--- a/Velkoobchod_ppcentershop_01.css
+++ b/Velkoobchod_ppcentershop_01.css
@@ -1086,3 +1086,11 @@ ol.cart-header>li>strong::before{
 		padding: 5px 10px;
 	}
 }
+
+
+#order-billing-methods::before{
+	content: "Omlouváme se, platba kartou je dočasně nedostupná"
+}
+.radio-wrapper:has(.name-billingId-70){
+	display: none;
+}
