--- a/natima_2.css
+++ b/natima_2.css
@@ -457,30 +457,67 @@ button:hover,
 	min-width: 24.5%;
 	border-radius: var(--border-radius);
 }
-.carousel-inner .carousel-banner-content{
+.carousel-inner .carousel-banner-content {
 	display: flex;
 	position: absolute;
-	bottom: 30px;
-	left: 40px;
-	color: var(--color-gray-800);
+	width: 100%;
+	padding: 50px;
+	bottom: 40px;
+	flex-direction: column;
+	left: 0;
+	justify-content: flex-start;
+	gap: 15px;
 }
 
 .carousel-inner .carousel-banner-button {
-    height: auto;
-    padding: 1.3em 1.2em;
-    border-radius: var(--border-radius);
-	right: auto;
-    font-weight: 600;
-    transition: all 0.3s ease-out;
-    font-size: 0.85rem;
+	font-size: 14px;
+	//font-size: 12px;
+	line-height: 1em;
+	width: 8em;
+	text-align: center;
+	max-width: 80%;
+	padding: 0.8em 0;
+	border-radius: var(--border-radius);
+	font-weight: 600;
+	transition: all 0.3s ease-out;
+	margin-top: 5px;
+position: absolute;
+	top: auto;
+	bottom: 0;
+}
+.carousel-inner .carousel-banner-content .carousel-banner-heading{
+	font-size: 24px;
+	//font-size: 18px;
+	min-height: 55px;
+}
+.carousel-inner .carousel-banner-content .carousel-banner-text{
+	font-size: 18px;
+	//font-size: 14px;
 }
 
-.carousel-inner .carousel-banner-content.dark .carousel-banner-button{
-	 background-color: white;
+.carousel-inner .carousel-banner-content .carousel-banner-heading,
+.carousel-inner .carousel-banner-content .carousel-banner-text{
+	line-height: 1.2em;
+	margin: 0;
 }
-.carousel-inner .carousel-banner-content.bright .carousel-banner-button {
-    background-color: var(--color-gray-800);
+.carousel-inner .carousel-banner-content.bright .carousel-banner-button,
+.carousel-inner .carousel-banner-content .carousel-banner-button{
+	background-color: var(--color-gray-800);
+	color: white;
 }
+.carousel-inner .carousel-banner-content.bright,
+.carousel-inner .carousel-banner-content{
+	color: var(--color-gray-800);
+}
+
+.carousel-inner .carousel-banner-content.dark .carousel-banner-button {
+	background-color: white;
+	color: var(--color-gray-800);
+}
+.carousel-inner .carousel-banner-content.dark {
+	color: white;
+}
+
 
 .carousel-control {
 	display: none;
