--- a/natima_2.css
+++ b/natima_2.css
@@ -530,18 +530,22 @@ position: absolute;
 /*carousel značky*/
 .next-to-carousel-banners {
 	margin: 0;
-	margin-top: 40px;
+	margin-top: 41px;
 	padding-top: calc(45px + 20px);
 	max-width: 100%;
 }
-.normal-banners-line {
-	display: grid!important;
-	grid-template-columns: repeat(5, 1fr);
-	column-gap: var(--gap);
+.next-to-carousel-banners .normal-banners-line {
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
+    column-gap: var(--gap);
+	padding-top: 66px;
 }
 .normal-banners-line .banner-wrapper {
 	margin-bottom: 0;
 	border-radius: var(--border-radius);
+}
+.next-to-carousel-banners .banner-wrapper img{
+	min-height: auto;
 }
 .next-to-carousel-banners .banner-wrapper:hover > img,
 .next-to-carousel-banners .banner-wrapper:hover > a > img {
