--- a/natima_2.css
+++ b/natima_2.css
@@ -1,3 +1,11 @@
+/*produkty test*/
+#products-2 {
+	width: 100%!important;
+	height: auto!important;
+}
+
+
+
 /*full-width do 1920*/
 
 body .container,
