--- a/natima_2.css
+++ b/natima_2.css
@@ -669,7 +669,7 @@ position: absolute;
 	display: grid;
 	grid-template-rows: 1fr;
 	padding: 0;
-	height: 105px;
+	height: 110px;
 	margin-top: 10px;
 }
 
@@ -703,9 +703,11 @@ position: absolute;
 .slick-slider.products  .product .p-in .p-in-in a span{
 	display: -webkit-box;
 	-webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
+    	-webkit-box-orient: vertical;
 	overflow: hidden;
-	font-size: 14px;
+	font-size: 15px;
+    	font-weight: 500;
+    	color: var(--color-gray-800);
 }
 
 .slick-slider.products  .product .p-in .p-in-in .ratings-wrapper {
@@ -720,7 +722,9 @@ position: absolute;
 }
 
 .products-block.products .product .prices .price-final strong {
-	font-size: 14px;
+	font-size: 15px;
+    	color: var(--color-gray-800)!important;
+    	font-weight: 600;
 }
 .slick-slider.products  .product .p-in .p-bottom > div .prices .price-final {
 	margin: 0
@@ -728,7 +732,8 @@ position: absolute;
 .slick-slider.products  .product .p-in .p-bottom > div .p-desc{
 	grid-row: 3;
 	margin: 0;
-	font-size: 12px;
+	font-size: 13px;
+	font-weigh: 300;
 	max-height: 999px;
 	display: -webkit-box;
 	-webkit-box-orient: vertical;
