--- a/natima3-upravy.css
+++ b/natima3-upravy.css
@@ -187,6 +187,7 @@ display: flex;
 	position: absolute!important;
 	transition: top 1s ease-in-out!important;
 	top: calc(100% + 10px)!important;
+	width: calc(100% - 30px)!important;
 }
 
 .type-product .sidebar.cartAnimationInProduct .cart-sidebar-box{
