--- a/Velkoobchod_ppcentershop_03.css
+++ b/Velkoobchod_ppcentershop_03.css
@@ -1161,3 +1161,48 @@ ol.cart-header>li>strong::before{
 		width: 100%!important;
 	}
 }
+
+/*produkt ikonky*/
+.product-icons {
+	display: flex;
+	flex-wrap: wrap;
+	max-width: 760px;
+	justify-content: center;
+	    margin: auto;
+	margin-top: 20px;
+	margin-bottom: 10px;
+}
+.product-icon {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 33.33%;
+	padding: 10px 20px;
+	gap: 10px;
+	text-align: center
+}
+.product-icons.three .product-icon{
+	width: 33.33%;
+
+}
+.product-icons.four .product-icon{
+	width: 25%;
+}
+@media (max-width: 768px) {
+	.product-icon {
+		width: 50%!important;
+		gap: 20px;
+	}
+	.product-icons > .product-icon {
+		display: none;
+	}
+	.product-icons > .product-icon:nth-child(-n+6) {
+		display: flex;
+	}
+}
+@media (max-width: 560px) {
+	.product-icon {
+		width: 100%!important;
+		gap: 20px;
+	}
+}
