--- a/Velkoobchod_ppcentershop_03.css
+++ b/Velkoobchod_ppcentershop_03.css
@@ -547,6 +547,11 @@ ol.cart-header>li>strong::before{
 }
 
 @media screen and (max-width: 1099px) {
+	.sekceProduktu p,
+	.sekceProduktu li {
+		text-align: left;
+	}
+	
 	.imghide {
 		display: none;
 	}
@@ -635,6 +640,90 @@ ol.cart-header>li>strong::before{
 		padding: 0;
 	}
 }
+/*Cards*/
+.cards {
+	display: flex;
+	gap: var(--gap);
+}
+
+.card {
+	border-radius: var(--border-radius);
+	overflow: hidden;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 1fr;
+	flex: 1;
+}
+
+.card,
+.card .card-bg {
+	aspect-ratio: 1/1.4;
+}
+
+@media (max-width: 768px) {
+	.cards {
+		flex-direction: column;
+	}
+	.card {
+		max-height: 550px;
+	}
+}
+
+@supports not (aspect-ratio: 1/1) {
+	.card,
+	.card .card-bg {
+		height: clamp(400px, 32vw, 600px) !important;
+	}
+}
+
+.card > div {
+	grid-row: 1;
+	grid-column: 1;
+}
+
+.card .card-bg {
+	position: relative;
+	display: flex;
+	z-index: 0;
+}
+
+.card .card-text {
+	z-index: 2;
+	margin-top: auto;
+	padding: 10px 20px;
+	position: relative;
+	color: white;
+	font-size: 24px;
+}
+.card h3 {
+	color: white;
+	font-size: 1em;
+	margin: 0;
+	padding: 0.5em 0 0.75em;
+}
+.card p {
+	font-size: 0.65em;
+	text-align: left;
+}
+
+.card .card-text > * {
+	z-index: 5;
+	position: relative;
+}
+.card .card-text::before {
+	content: "";
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: hsla(0, 0%, 20%, 50%);
+	-webkit-backdrop-filter: blur(20px);
+	backdrop-filter: blur(20px);
+	z-index: 1;
+}
+
 /*konec kav*/
 /*KONEC UPRAVY PRODUTKY SEKCE*/
 
